<resources>
    <string name="txt_search_display">在货架中搜索</string>
    <string name="txt_import">入库</string>
    <string name="txt_export">出库</string>
    <string name="txt_profile">个人信息</string>
    <string name="txt_appname">库存管理</string>
    <string name="txt_shelf_no">货架号</string>
    <string name="txt_username">用户名</string>
    <string name="txt_function_profile">个人信息</string>
    <string name="txt_function_info">关于</string>
    <string name="txt_dialog_item_name">项目名称</string>
    <string name="txt_dialog_item_shelf">货架位置（货架别名）</string>
    <string name="txt_dialog_item_count_left">剩余%d</string>
    <string name="txt_dialog_cancel">取消</string>
    <string name="txt_log_in">登录</string>
    <string name="txt_log_in_tip">需要额外的信息来认证您的身份</string>
    <string name="txt_login_name">用户名</string>
    <string name="txt_login_pwd">密码</string>
    <string name="txt_login_failed">登录失败</string>
    <string name="txt_back">返回</string>
    <string name="txt_nomodel">无型号信息</string>
    <string name="txt_nofor">无对应用途</string>
    <string name="txt_search_method_shelf">货架号</string>
    <string name="txt_search_method_name">货物名</string>
    <string name="txt_search_method_id">唯一编码</string>
    <string name="txt_search_method_model">型号</string>
    <string name="txt_search_via_shelf">通过货架号来搜索</string>
    <string name="txt_search_via_name">通过货物名称来搜索</string>
    <string name="txt_search_via_id">通过唯一编码来搜索</string>
    <string name="txt_search_via_model">通过型号来搜索</string>
    <string name="txt_no_id">无唯一编码</string>
    <string name="txt_direct_import_tips">向货架上添加新物品？</string>
    <string name="txt_direct_import">直接入库</string>
    <string name="txt_dialog_click_to_set_shelf">点击以扫码设置货架位置</string>
    <string name="txt_dialog_click_to_set_for">点击设置用途</string>
    <string name="txt_unable_to_connect">服务器通信失败</string>
    <string name="txt_login_forget">忘记密码</string>
    <string name="txt_ok">好</string>
    <string name="txt_cast_to_export">转换为出库</string>
    <string name="txt_cast_to_import">转换为入库</string>
    <string name="txt_log_see">查看日志</string>
    <string name="txt_search">搜索</string>
    <string name="txt_profile_update">更新个人信息</string>
    <string name="txt_profile_hi">您好！%s</string>
    <string name="txt_profile_update_pwd">更新密码</string>
    <string name="txt_profile_old_pwd">输入当前密码</string>
    <string name="txt_profile_new_pwd">输入新密码</string>
    <string name="txt_profile_confirm_pwd">确认新密码</string>
    <string name="txt_exception">发生异常</string>
    <string name="txt_privilege_insufficient_title">权限不足</string>
    <string name="txt_token_expired_title">凭据过期</string>
    <string name="txt_info_title">信息</string>
    <string name="txt_no_details">没有关于此的详细信息</string>
    <string name="txt_successed">成功</string>
    <string name="txt_profile_pwd_nomatch">两次输入的密码不匹配</string>
    <string name="txt_permissions_refused">必要权限未提供</string>
    <string name="txt_forget_pwd_tip">请联系管理员更新密码</string>
    <string name="txt_io_format_error">输入的格式不正确</string>
    <string name="txt_log_for">，用于 %s。</string>
    <string name="txt_nodepart">无所属部门</string>
    <string name="txt_loading">正在加载……</string>
</resources>