<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/ui3_profile_title"
        style="@style/Theme.UI3Theme.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_profile_hi" android:textColor="#FFFFFFFF"
        android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ui3_profile_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_broder_win"
        android:paddingLeft="8dp"
        android:paddingTop="16dp" android:paddingRight="8dp"
        android:visibility="visible" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui3_profile_old"
            style="@style/Theme.UI3Theme.OutlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_profile_old_pwd"
            android:paddingTop="8dp" android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/ui3_profile_new" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui3_profile_old_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui3_profile_new"
            style="@style/Theme.UI3Theme.OutlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_profile_new_pwd"
            android:paddingTop="8dp" android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/ui3_profile_confirm" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui3_profile_new_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ui3_profile_confirm"
            style="@style/Theme.UI3Theme.OutlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_profile_confirm_pwd"
            android:paddingTop="8dp" android:paddingBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/ui3_profile_update_btn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ui3_profile_confirm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ui3_profile_back"
            style="@style/Theme.UI3Theme.FloatingButtonImmersive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/txt_back" app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:srcCompat="@drawable/ic_arrow_left">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/ui3_profile_update_btn"
            style="@style/Theme.UI3Theme.FloatingButtonExtended"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/txt_profile_update" android:text="@string/txt_profile_update_pwd"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ui3_profile_back"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>