<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_border">

    <TextView
        android:id="@+id/dialog_background"
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <TextView
        android:id="@+id/dialog_shelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_dialog_item_shelf"
        android:textColor="@color/FontColorDim"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title">

    </TextView>

    <TextView
        android:id="@+id/dialog_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txt_nofor"
        android:textColor="@color/FontColorDim"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/dialog_shelf"
        app:layout_constraintTop_toTopOf="@+id/dialog_shelf">

    </TextView>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_dialog_item_name"
        android:textColor="@color/FontColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/dialog_goods_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nomodel"
        android:layout_marginStart="8dp"
        android:textColor="@color/FontColorDim"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_title"
        app:layout_constraintStart_toEndOf="@+id/dialog_title">

    </TextView>

    <TextView
        android:id="@+id/dialog_goods_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_id"
        android:layout_marginStart="8dp"
        android:textColor="@color/FontColorDim"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_title"
        app:layout_constraintStart_toEndOf="@+id/dialog_goods_model">

    </TextView>

    <ImageView
        android:id="@+id/dialog_min"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_background"
        android:clickable="true"
        android:src="@drawable/ic_double_arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_count"
        app:layout_constraintEnd_toStartOf="@+id/dialog_minus">
    </ImageView>

    <ImageView
        android:id="@+id/dialog_minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ripple_background"
        android:clickable="true"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_count"
        app:layout_constraintEnd_toStartOf="@+id/dialog_count">
    </ImageView>

    <EditText
        android:id="@+id/dialog_count"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/FontColorDim"
        android:textSize="16sp"
        android:text="0"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_shelf"
        android:inputType="number">

    </EditText>

    <ImageView
        android:id="@+id/dialog_max"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ripple_background"
        android:clickable="true"
        android:src="@drawable/ic_double_arro_right"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_count"
        app:layout_constraintStart_toEndOf="@+id/dialog_plus">
    </ImageView>

    <ImageView
        android:id="@+id/dialog_plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ripple_background"
        android:clickable="true"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_count"
        app:layout_constraintStart_toEndOf="@+id/dialog_count">
    </ImageView>

    <TextView
        android:id="@+id/dialog_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_dialog_item_count_left"
        android:textSize="15sp"
        android:padding="5dp"
        android:textColor="@color/FontColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <TextView
        android:id="@+id/dialog_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:background="@drawable/ripple_background"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/txt_import"
        android:textColor="@color/FontColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_export">


    </TextView>

    <TextView
        android:id="@+id/dialog_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_background"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:clickable="true"
        android:text="@string/txt_export"
        android:textColor="@color/FontColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cancel">


    </TextView>

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_dialog_cancel"
        android:textColor="@color/FontColor"
        android:textSize="15sp"
        android:padding="5dp"
        android:clickable="true"
        android:background="@drawable/ripple_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>