<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:clickable="true">

    <EditText
        android:id="@+id/ui_search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/txt_search_via_shelf"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:textColor="@color/FontColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ui_search_method"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <ImageView
        android:id="@+id/ui_search_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/txt_back"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/ui_search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ui_search_bar" />

    <TextView
        android:id="@+id/ui_search_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/txt_shelf_no"
        android:textSize="15sp"
        android:background="@drawable/ripple_background"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/ui_search_bar"
        app:layout_constraintStart_toEndOf="@+id/ui_search_back"
        app:layout_constraintTop_toTopOf="@+id/ui_search_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>