<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IOActivity"
    android:id="@+id/ui3_io_base"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ui3_io_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_broder_win"
        android:paddingTop="8dp"
        android:visibility="visible" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ui3_io_back"
            style="@style/Theme.UI3Theme.FloatingButtonImmersive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/txt_back"
            app:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/ui3_io_main"
            app:layout_constraintStart_toStartOf="parent" app:srcCompat="@drawable/ic_arrow_left">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ui3_io_log"
            style="@style/Theme.UI3Theme.FloatingButtonImmersive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/txt_log_see"
            app:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/ui3_io_main"
            app:layout_constraintEnd_toEndOf="parent" app:srcCompat="@drawable/ic_log">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ui3_io_main"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/Transparent"
            android:paddingTop="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/ui3_io_reverse"
                style="@style/Theme.UI3Theme.FloatingButtonImmersive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:elevation="0dp"
                android:text="@string/txt_cast_to_export"
                app:elevation="0dp" app:layout_constraintBottom_toBottomOf="@+id/ui3_io_btn"
                app:layout_constraintStart_toStartOf="parent" app:icon="@drawable/ic_change">

            </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

            <TextView
                android:id="@+id/ui3_io_shelf"
                style="@style/Theme.UI3Theme.Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="5dp"
                android:text="@string/txt_search_method_shelf"
                android:textColor="@color/FontColorDim"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/ui3_io_for"
                app:layout_constraintStart_toStartOf="@+id/ui3_io_model">

            </TextView>

            <TextView
                android:id="@+id/ui3_io_for"
                style="@style/Theme.UI3Theme.Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="5dp"
                android:paddingTop="14dp"
                android:paddingRight="5dp"
                android:paddingBottom="14dp"
                android:text="@string/txt_nofor"
                android:textColor="@color/FontColorDim"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/ui3_io_count"
                app:layout_constraintStart_toStartOf="@+id/ui3_io_model">

            </TextView>
            <Spinner
                android:id="@+id/ui3_io_for_spinner"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_for"
                app:layout_constraintStart_toStartOf="@+id/ui3_io_for"
                app:layout_constraintTop_toTopOf="@+id/ui3_io_for">

            </Spinner>

            <Spinner
                android:id="@+id/ui3_io_for_spinner_sub"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_for"
                app:layout_constraintStart_toEndOf="@+id/ui3_io_for_spinner" app:layout_constraintTop_toTopOf="@+id/ui3_io_for">

            </Spinner>

            <TextView
                android:id="@+id/ui3_io_title"
                style="@style/Theme.UI3Theme.Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/txt_dialog_item_name"
                android:textColor="@color/FontColor"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/ui3_io_model" app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <TextView
                android:id="@+id/ui3_io_left"
                style="@style/Theme.UI3Theme.Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                android:text="@string/txt_nomodel"
                android:textColor="@color/FontColorDim"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_title"
                app:layout_constraintStart_toEndOf="@+id/ui3_io_title">

            </TextView>

            <TextView
                android:id="@+id/ui3_io_model"
                style="@style/Theme.UI3Theme.Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="5dp"
                android:text="@string/txt_nomodel"
                android:textColor="@color/FontColorDim"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/ui3_io_shelf"
                app:layout_constraintStart_toStartOf="@+id/ui3_io_title">

            </TextView>

            <TextView
                android:id="@+id/ui3_io_uid"
                style="@style/Theme.UI3Theme.Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                android:text="@string/txt_no_id"
                android:textColor="@color/FontColorDim"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/ui3_io_model"
                app:layout_constraintTop_toTopOf="@+id/ui3_io_model">

            </TextView>

            <ImageView
                android:id="@+id/ui3_io_min"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ripple_background"
                android:clickable="true"
                android:src="@drawable/ic_double_arrow_left"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_count"
                app:layout_constraintEnd_toStartOf="@+id/ui3_io_minus">

            </ImageView>

            <ImageView
                android:id="@+id/ui3_io_minus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ripple_background"
                android:clickable="true"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_count"
                app:layout_constraintEnd_toStartOf="@+id/ui3_io_count">

            </ImageView>

            <EditText
                android:id="@+id/ui3_io_count"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:inputType="number"
                android:text="0"
                android:textColor="@color/FontColorDim"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/ui3_io_btn"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

            </EditText>

            <ImageView
                android:id="@+id/ui3_io_max"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ripple_background"
                android:clickable="true"
                android:src="@drawable/ic_double_arro_right"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_count"
                app:layout_constraintStart_toEndOf="@+id/ui3_io_plus">

            </ImageView>

            <ImageView
                android:id="@+id/ui3_io_plus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ripple_background"
                android:clickable="true"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/ui3_io_count"
                app:layout_constraintStart_toEndOf="@+id/ui3_io_count">

            </ImageView>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/ui3_io_btn"
                style="@style/Theme.UI3Theme.FloatingButtonExtended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/txt_import"
                android:text="@string/txt_import"
                app:icon="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>